# FunSDK

./: .gitignore  .gitmodules  README.md  build.gradle.kts  install.sh  settings.gradle.kts  upload.sh
ApiHttpSDK/ApiHttpBase/: build.gradle.kts
ApiHttpSDK/ApiHttpDebug/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ApiHttpSDK/ApiHttpInfo/: build.gradle.kts  consumer-rules.pro
ApiHttpSDK/ApiHttpWebServerPlugin/: build.gradle.kts  consumer-rules.pro
ApmSDK/ApmInfo/: build.gradle.kts  consumer-rules.pro
ApmSDK/ApmInfo/src/main/: AndroidManifest.xml
ApmSDK/ApmInfo/src/main/cpp/: CMakeLists.txt
ApmSDK/ApmInfo/src/main/cpp/anr/: anr_handler.cpp  anr_handler.h
ApmSDK/ApmInfo/src/main/cpp/common/: apm_errno.h  apm_signal.cpp  apm_signal.h
ApmSDK/ApmInfo/src/main/cpp/native_crash/: crash_handler.cpp  crash_handler.h
ApmSDK/ApmInfo/src/main/cpp/src/: apm.cpp
CoreFramework/: build.gradle.kts  consumer-rules.pro
CoreFramework/src/main/: AndroidManifest.xml
CoreFramework/src/main/res/values/: ids.xml
DebugBridgeSDK/DebugBridgeBase/: build.gradle.kts  proguard-rules.pro
DebugBridgeSDK/DebugBridgeNanoInfo/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
DocumentsSDK/DocumentBase/: build.gradle.kts
DocumentsSDK/DocumentImage/: build.gradle.kts
DocumentsSDK/DocumentPdf/: build.gradle.kts
DocumentsSDK/DocumentPdf/src/main/cpp/: CMakeLists.txt
DocumentsSDK/DocumentPdf/src/main/cpp/src/: PdfAction.cpp  PdfCommon.cpp  PdfLoader.cpp  PdfRender.cpp  mainJNILib.cpp
DocumentsSDK/DocumentPdf/src/main/cpp/src/h/: pdfmanager.h
DocumentsSDK/Image/DocumentImageBase/: build.gradle.kts
DocumentsSDK/Image/DocumentImageInfo/: build.gradle.kts
DocumentsSDK/Pdf/DocumentPdfBase/: build.gradle.kts
DocumentsSDK/Pdf/DocumentPdfInfo/: build.gradle.kts  consumer-rules.pro
DocumentsSDK/PdfInfo/: build.gradle.kts
ImageLoaderSDK/ImageLoaderBase/: build.gradle.kts
ImageLoaderSDK/ImageLoaderInfo/: build.gradle.kts  consumer-rules.pro
LogFileSDK/LogFileInfo/: ZSTD_INTEGRATION.md  build.gradle.kts  consumer-rules.pro
LogFileSDK/LogFileInfo/src/main/cpp/: CMakeLists.txt
LogFileSDK/LogFileInfo/src/main/cpp/src/: FileClearUtils.cpp  JniCallUtils.cpp  LogFileInit.cpp  LogFileManager.cpp
LogFileSDK/LogFileInfo/src/main/cpp/src/h/: FileClearUtils.h  JniCallUtils.h  LogFileDecompress.h  LogFileInit.h  SecurityFactory.h  SecurityProvider.h  SecuritySink.h  SecurityUtils.h  security_sink.h
LogFileSDK/LogFileSpdlogInfo/src/main/cpp/: CMakeLists.txt
LogFileSDK/LogFileSpdlogInfo/src/main/cpp/spdlog/: CMakeLists.txt
LogFileSDK/LogFileSpdlogInfo/src/main/cpp/src/: FileClearUtils.cpp  LogFileDecompress.cpp  LogFileDecrypt.cpp  LogFileInit.cpp  LogFileManager.cpp
LogFileSDK/LogFileSpdlogInfo/src/main/cpp/src/crypto/: chacha20poly1305.h
LogFileSDK/LogFileSpdlogInfo/src/main/cpp/src/h/: EncryptedFileSink.h  FileClearUtils.h  LogFileInit.h  SecurityFactory.h
LogFileSDK/LogFileSpdlogInfo/tools/: decrypt_log.py
LogFileSDK/LogFileXlogInfo/: build.gradle.kts
LogFileSDK/LogFileXlogInfo/src/main/cpp/: CMakeLists.txt  JNI_OnLoad.cpp
LogFileSDK/LogFileXlogInfo/src/main/cpp/comm/: verinfo.h
LogFileSDK/LogFileXlogInfo/src/main/cpp/comm/thread/: condition.h  lock.h  mutex.h  spinlock.h  thread.h
LogFileSDK/LogFileXlogInfo/src/main/cpp/mars/comm/: time_utils.h
LogFileSDK/LogFileXlogInfo/src/main/cpp/mars/comm/thread/: condition.h  lock.h  mutex.h  thread.h
LogFileSDK/LogFileXlogInfo/src/main/cpp/xlog/jni/: Java2C_Xlog.cc  Java2C_Xlog2.cc
LogFileSDK/LogFileXlogInfo/src/main/cpp/xlog/jni/h/: JniCallUtils.h
LogFileSDK/LogFileXlogInfo/src/main/cpp/xlog/src/: appender.cc
MediaSDK/Camera/CameraBase/: build.gradle.kts
MediaSDK/Camera/CameraInfo/: build.gradle.kts
MediaSDK/Camera/CameraInfo/src/main/: AndroidManifest.xml
Permission/PermissionInfo/: build.gradle.kts
PermissionSDK/PermissionBase/: build.gradle.kts
PermissionSDK/PermissionInfo/: build.gradle.kts
Plugins/config/: sdk.gradle
Plugins/keystore/: app.keystore
Repo/io/github/cangHW/Service-CoreFramework/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
ThreadPoolSDK/ThreadPoolBase/: build.gradle.kts
ThreadPoolSDK/ThreadPoolInfo/: build.gradle.kts  consumer-rules.pro
WebServerSDK/WebServerBase/: build.gradle.kts
WebServerSDK/WebServerInfo/: build.gradle.kts
WebViewSDK/WebViewBase/: build.gradle.kts
WebViewSDK/WebViewBridgeDS/: build.gradle.kts
WebViewSDK/WebViewDSBridge/: build.gradle.kts
WebViewSDK/WebViewInfo/: build.gradle.kts  consumer-rules.pro
WebViewSDK/WebViewMonitor/: build.gradle.kts  consumer-rules.pro
WidgetSDK/WidgetInfo/: build.gradle.kts  consumer-rules.pro
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/apk/: ss.apk
app/src/main/assets/web/: test_bridge.html  test_edittext.html  test_webview_monitor.html
app/src/main/res-api/layout/: activity_api.xml
app/src/main/res-apm/layout/: activity_apm_jank_test.xml
app/src/main/res-document/layout/: activity_document_pdf.xml  activity_document_pdf_preview.xml
app/src/main/res-framework/layout/: activity_framework.xml  activity_framework_appinfo.xml  activity_framework_device.xml  activity_framework_event.xml  activity_framework_file.xml  activity_framework_monitor.xml  activity_framework_security.xml  activity_framework_sound.xml  activity_framework_ui.xml
app/src/main/res-framework/values/: strings.xml
app/src/main/res-media/layout/: activity_camera.xml  activity_camera_loader.xml  activity_camera_view.xml  activity_media.xml
app/src/main/res-web/layout/: activity_web_view.xml  web_dialog.xml
app/src/main/res-widget/layout/: activity_widget.xml  activity_widget_center_select.xml  activity_widget_dialog.xml  activity_widget_notification.xml  (+4 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugins/config/: sdk.gradle
plugins/gradle/: maven_center.gradle  private_maven.gradle
plugins/script/: maven_center.gradle  private_maven.gradle
(+2310 files in other folders)
